--- a/p18/new.html
+++ b/p18/new.html
@@ -1,15 +1,3 @@
-<?php
-
-include("config.php");
-
-$result = $conn->query("SHOW DATABASES LIKE 'dbescuela';");
-if ($result->num_rows == 0) {
-    header("Location:creacion.php");
-}
-
-mysqli_close($conn);
-session_start(); ?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,24 +9,32 @@ session_start(); ?>
         * {
             box-sizing: border-box;
         }
-
         form {
             margin: 50px;
             border: 1px solid;
         }
     </style>
 </head>
-
+<body>
 <body align="center">
-    <form action="./comprobacion.php" method="post">
+    <form action="./new.php" method="post">
+        <h1>Codigo</h1>
+        <input type="number" name="code" required><br>
+        <h1>Nombre</h1>
+        <input type="text" name="nombre" required><br>
+        <h1>Apellido paterno</h1>
+        <input type="text" name="pat" required><br>
+        <h1>Apellido materno</h1>
+        <input type="text" name="mat" required><br>
+        <h1>edad</h1>
+        <input type="number" name="age" required><br>
+        <h1>carrera</h1>
+        <input type="text" name="career" required><br>
         <h1>Usuario</h1>
         <input type="text" name="username" required><br>
         <h1>Contraseña</h1>
         <input type="text" name="password" required><br><br>
         <input type="submit" name="submit" value="Entrar">
     </form>
-    <h1>¿Eres usuario nuevo? Crea una cuenta</h1><br>
-    <h2><a href="./new.html">Crear cuenta</a></h2>
 </body>
-
 </html>
