--- a/PFinal/login.html
+++ b/PFinal/login.html
@@ -17,6 +17,11 @@
         height: 20rem;
         width: 100%;
         padding: 1rem;
+        display: flex;
+      }
+      header h1 {
+        font-size: 8rem;
+        padding-left: 15rem;
       }
       img {
         width: 18rem;
@@ -27,6 +32,7 @@
         border: 1px solid;
         width: 40%;
         height: 40rem;
+        padding-top: 4rem;
       }
 
     </style>
@@ -35,7 +41,7 @@
     <header>
       <img src="./Includes/logo.jpeg" />
       <h1>Incio de sesión</h1>
-    </header>
+    </header><br><br><br>
     <main align="center">
       <h1>Por favor introduce tus credenciales</h1>
       <div class="design-login">
